--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="login-page">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
-        <img src="img/logo.png" alt="logo" width="100" height="auto" />
+        <img src="img/logo.png" alt="logo" width="120" height="80" />
       </a>
       <button
         class="navbar-toggler"
