--- a/index.html
+++ b/index.html
@@ -1,50 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="author" content="Yared" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>A Simple Login Page</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" type="text/css" href="css/login.css" />
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="author" content="Yared" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>A Simple Login Page</title>
+  <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="css/login.css" />
   </head>
 
-  <body class="login-page">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">
-        <img src="img/logo.png" alt="logo" width="100" height="75" />
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<body class="login-page">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img src="img/logo.png" alt="logo" width="100" height="75" />
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Menu 1</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Menu 2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Menu 3</a>
-          </li>
-        </ul>
-      </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Menu 1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Menu 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Menu 3</a>
+        </li>
+      </ul>
+    </div>
     </nav>
     <section class="h-100">
       <div class="container h-100">
@@ -56,46 +46,34 @@
                 <form id="form" novalidate="" onsubmit="login(event);return false">
                   <div class="form-group">
                     <label for="username">Username</label>
-                    <input
-                      id="username"
-                      type="email"
-                      class="form-control"
-                      name="username"
-                      value=""
-                      required
-                      autofocus
-                    />
-                    <div class="invalid-feedback">Username is required</div>
+                  <input id="username" type="email" class="form-control" name="username" value="" required autofocus />
+                  <div class="invalid-feedback">Username is required</div>
                   </div>
 
-                  <div class="form-group">
-                    <label for="password">Password </label>
-                    <input
-                      id="password"
-                      type="password"
-                      class="form-control"
-                      name="password"
-                      required
-                      data-eye
-                    />
-                    <div class="invalid-feedback">Password is required</div>
+                <div class="form-group">
+                  <label for="password">Password </label>
+                  <input id="password" type="password" class="form-control" name="password" required data-eye />
+                  <div class="invalid-feedback">Password is required</div>
                   </div>
 
-                  <div class="form-group mt-5">
-                    <button type="submit" class="btn btn-primary btn-block">
-                      Submit
-                    </button>
-                    <label id="message" class="mt-2"></label>
-                  </div>
+                <div class="form-group mt-5">
+                  <button type="submit" class="btn btn-primary btn-block">
+                    Submit
+                  </button>
+                  <label id="message" class="mt-2"></label>
+                </div>
                 </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-    <script src="js/login.js"></script>
+                </div>
+                </div>
+                </div>
+                </div>
+                </div>
+                </section>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+    integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+  <script src="js/login.js"></script>
   </body>
+
 </html>
